[package]
name = "bst-trim-post"
version = "0.1.0"
authors = ["Stephen OBrien <wayofthepie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.61"
serde = { version = "1.0.123", features = ["derive"] }

